Loading disk and new json
Added a loading disk and cleaned up the json from duplicates

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <p id="quoteText"></p>
       <p id="quoteInfo"></p>
       <!-- Poster image will be injected here -->
+      <div id="imageLoader" class="spinner" style="display: none;"></div>
     </div>
 
     <div class="image-share-buttons">
